--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "morgan": "^1.9.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
     "serve-favicon": "^2.4.5"
   },
   "scripts": {
