--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2",
     "serve-favicon": "^2.4.5",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4"
@@ -27,5 +26,16 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001"
+  "proxy": {
+    "/": {
+      "target": "http://localhost:3001"
+    },
+    "/socket.io": {
+      "target": "ws://localhost:3001",
+      "ws": true
+    }
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.2"
+  }
 }
