Fix weird prob with browser requesting favicon every client route change

--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "eject": "react-scripts eject"
   },
   "proxy": {
-    "/": {
+    "/api": {
+      "target": "http://localhost:3001"
+    },
+    "/rt": {
       "target": "http://localhost:3001"
     },
     "/socket.io": {
