--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.1",
+    "lodash.clonedeep": "^4.5.0",
     "mongoose": "^5.0.7",
     "morgan": "^1.9.0",
     "react": "^16.2.0",
@@ -35,7 +36,7 @@
     },
     "/socket.io": {
       "target": "ws://localhost:3001",
-        "ws": true
+      "ws": true
     }
   },
   "devDependencies": {
